rel 0.1.0

* Set timezone in config file

 
rel 0.0.10