@@ -1,4 +1,9 @@
 
+- moznost nakupovat hinty
+- vylepsit chovani navbaru na uzkem displayi 
+  (predevsim pri zobrazenem odpocitavani do napovedy)
+- prejit na bootstrap3 (http://getbootstrap.com/migration/)
+
 CHROUST
 -------
 
