@@ -3,6 +3,16 @@
 /* This file can redefine any config value from framework
  */
 
+    if (!isset($config->iquest)) $config->iquest = new stdclass();
+
+    /** 
+     *  Specify whether wallet is active
+     *         
+     *  Change to false if no paid hints are used in the contest
+     */ 
+    $config->iquest->wallet_active = true;
+
+
     /** 
      *  Default timezone:
      *         
