@@ -46,7 +46,7 @@ require_once(getenv('SERWEB_DIR')."functions/bootstrap.php");
 
 $GLOBALS['page_attributes']['logout_url'] = $controler->url('logout.php');
 $GLOBALS['page_attributes']['giveitup_url'] = $controler->url('giveitup.php');
-
+$GLOBALS['page_attributes']['display_wallet'] = $GLOBALS['config']->iquest->wallet_active;
 
 if (!empty($_SESSION['auth']) and 
     $_SESSION['auth']->is_authenticated()){
