@@ -37,11 +37,13 @@
 }
 
 .navbar-inverse .clock,
+.navbar-inverse .wallet,
 .navbar-inverse .navinfo {
     color: #DDDDDD;
 }
 
-.navbar .clock {
+.navbar .clock,
+.navbar .wallet {
     line-height: 15px;
     font-size: 12px;
     white-space: nowrap;
